--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,13 @@ dist-ssr
 
 # Environment variables
 .env
+.env.*
 .env.local
+.env.development
 .env.development.local
-.env.test.local
+.env.production
 .env.production.local
+.env.test.local
 
 # Editor directories and files
 .vscode/*
